# mdsplitter

./: README.md  pyproject.toml
src/mdsplitter/: architecting.ipynb  mdsplitter.py
test_media/: bicycles.md  busses.md  cats.md  computers.md  dogs.md  humans.md  test_note.md  test_note_template.md
