[tool.poetry]
name = "mdsplitter"
version = "0.1.0"
description = ""
authors = ["joachimbbp <104856283+joachimbbp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
